Modified vh centering

--- a/14 Assignment - 09 febr 2016/index.html
+++ b/14 Assignment - 09 febr 2016/index.html
@@ -8,42 +8,46 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-  <div class="container container-margins">
-    <div class="row">
-      <div class="col-lg-12 text-center margin-b">
-        <p><img src="img/logo.jpg" alt="Logo image" /></p>
-        <h2 class="coupons">Sixt Car Rental Coupons</h2>
-        <h3 class="discounts">Discounts and Specials</h3>
-      </div>
-    </div>
-
-      <div class="row wrapper">
-      <div class="col-lg-5 discount-info text-center outer-second">
-        <div class="inner-second1 text-box-padding">
-
-        <h1 class="di-percentage-h1">5% OFF</h1>
-        <p class="di-percentage-txt text-left">Car Rental Discount until May 21<sup>st</sup> 2015</p>
-        <hr class="hr-line">
-        <h4 class="di-code-txt">DISCOUNT CODE: <span class="di-code">SIXTA011</span></h4>
-      </div>
-      </div>
-
-      <div class="col-lg-5 js-car">
-        <img class="js-wheel" src="img/roata1.png" alt="Wheel" />
-      </div>
-
-
-      <a href="#" id="js-get-it">
-      <div class="col-lg-2 get-it outer-second">
-        <div class="inner-second2 text-center">
-          <p>GET IT NOW</p>
-          <p><span class="fa fa-arrow-right"></span></p>
+<body>
+  <div class="outer">
+    <div class="container inner">
+      <div class="row">
+        <div class="col-lg-12 text-center margin-b">
+          <p><img src="img/logo.jpg" alt="Logo image" /></p>
+          <h2 class="coupons">Sixt Car Rental Coupons</h2>
+          <h3 class="discounts">Discounts and Specials</h3>
         </div>
       </div>
-      </a>
+
+        <div class="row wrapper">
+        <div class="col-lg-5 discount-info text-center outer-second">
+          <div class="inner-second1 text-box-padding">
+
+          <h1 class="di-percentage-h1">5% OFF</h1>
+          <p class="di-percentage-txt text-left">Car Rental Discount until May 21<sup>st</sup> 2015</p>
+          <hr class="hr-line">
+          <h4 class="di-code-txt">DISCOUNT CODE: <span class="di-code">SIXTA011</span></h4>
+        </div>
+        </div>
+
+        <div class="col-lg-5 js-car">
+          <img class="js-wheel" src="img/roata1.png" alt="Wheel" />
+        </div>
+
+
+        <a href="#" id="js-get-it">
+        <div class="col-lg-2 get-it outer-second">
+          <div class="inner-second2 text-center">
+            <p>GET IT NOW</p>
+            <p><span class="fa fa-arrow-right"></span></p>
+          </div>
+        </div>
+        </a>
+      </div>
+
+      </div>
     </div>
 
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/theCar.js"></script>
