--- a/13 Assignment - 09 febr 2016/index.html
+++ b/13 Assignment - 09 febr 2016/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <div class="container">
+<div class="outer">.
+  <div class="container inner">
     <div class="col-lg-6 cf-reservation-content">
       <div class="row row-set">
         <div class="col-lg-12 text-center">
@@ -38,5 +39,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+</div>
 </body>
 </html>
